@@ -1,6 +1,11 @@
+2008-07-17  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclDictObj.c (DictWithCmd, FinalizeDictWith): Split the
+	implementation of [dict with] so that it works with NRE.
+
 2008-07-16  George Peter Staplin <georgeps@users.sf.net>
 	
-	* win/tclWinThrd.c: Test for TLS_OUT_OF_INDEXES to make certain	that
+	* win/tclWinThrd.c: Test for TLS_OUT_OF_INDEXES to make certain that
 	thread key creation is successful.
 
 2008-07-16  Donal K. Fellows  <dkf@users.sf.net>
